[#1294] Further fix on vertical align

--- a/Dashboard/app/css/main.scss
+++ b/Dashboard/app/css/main.scss
@@ -502,19 +502,21 @@ input[type="submit"] {
     }
 }
 
+
 .editAnswerMenu {
     position: relative;
     margin: 10px auto;
     width: 100%;
     background: rgb(205, 205, 205);
     ul {
-        display: -webkit-box;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
+        @include flexbox;
         -webkit-align-items: center;
         align-items: center;
+        -webkit-align-content: center;
+        align-content: center;
+        -webkit-justify-content: space-around;
+        justify-content: space-around;
+        padding:15px 0;
         li {
             flex-grow:1;
             text-align:center;
